Add ooxml file process interface test